Fix overflow behavior of quote

--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ header img {
     max-width: 80%;
     margin: auto;
     font-style: italic;
+    overflow: auto;
 }
 .quote-credits {
     font-size: 24px;
